# open-task-manager-state-machine

./: CMakeLists.txt  README.md  driver_audio.c  driver_audio.h  driver_bd37534.c  driver_bd37534.h  octoppus_update.c  octoppus_update.h  octopus.c  octopus.h  octopus_4g.c  octopus_4g.h  octopus_adc.c  octopus_adc.h  octopus_bafang.c  octopus_bafang.h  octopus_base.h  octopus_beep.c  octopus_ble.c  octopus_ble.h  octopus_ble_hal.c  octopus_ble_hal.h  octopus_bms.c  octopus_bms.h  octopus_bsp.c  octopus_bsp.h  octopus_bsp_hk32l08x.c  octopus_bsp_hk32l08x.h  octopus_bsp_nation.c  octopus_bsp_nation.h  octopus_bt.c  octopus_bt.h  octopus_can.c  octopus_can.h  octopus_can_2E006.c  octopus_can_2E006.h  octopus_can_2E008.c  octopus_can_2E008.h  octopus_can_hal.c  octopus_can_hal.h  (+77 more)
CAN/: can_function.c  can_function.h  can_id_find.c  can_id_find.h  can_message_l.c  can_message_l.h  can_message_rx.c  can_message_rx.h  can_message_tx.c  can_message_tx.h  can_queue.c  can_queue.h  can_type.h
CAN/can_signal_rx/: can_signal_rx.c  can_signal_rx.h  can_signal_rx_bcm2_0x170.c  can_signal_rx_bcm2_0x170.h  can_signal_rx_bcm3_0x172.c  can_signal_rx_bcm3_0x172.h  can_signal_rx_bcm4_0x173.c  can_signal_rx_bcm4_0x173.h  can_signal_rx_bcm5_0x195.c  can_signal_rx_bcm5_0x195.h  can_signal_rx_bcu1_0x185.c  can_signal_rx_bcu1_0x185.h  can_signal_rx_bcu2_0x203.c  can_signal_rx_bcu2_0x203.h  can_signal_rx_bcu3_0x20B.c  can_signal_rx_bcu3_0x20B.h  can_signal_rx_bcu4_0x305.c  can_signal_rx_bcu4_0x305.h  can_signal_rx_bcu5_0x207.c  can_signal_rx_bcu5_0x207.h  can_signal_rx_bcu6_0x502.c  (+45 more)
(+43 files in other folders)
